update the message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <main>
-        <p>hello friend</p>
+        <p>this page left intentionally blank</p>
       </main>
     </body>
 </html>
