update with more useful content and fonts

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <html>
     <head>
         <title>web page of arthur vigil</title>
-        <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <main>
-        <p>this page left intentionally blank</p>
+        <p>Thanks for visiting! I'm currently updating this page. For now you can find me on <a href="https://github.com/ahvigil">Github</a> and 
+          <a href="https://www.linkedin.com/in/ahvigil/">LinkedIn</a></p>
       </main>
     </body>
 </html>
