update welcome message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <main>
-        <p>Thanks for visiting! I'm currently updating this page. For now you can find me on <a href="https://github.com/ahvigil">Github</a> and 
+        <p>Thanks for visiting! Not much to see here right now, but you can find me on <a href="https://github.com/ahvigil">Github</a> and 
           <a href="https://www.linkedin.com/in/ahvigil/">LinkedIn</a></p>
       </main>
     </body>
